# aletheia

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  rust-clippy.yml
aletheia/: Cargo.toml  README.md
aletheia/src/: agents.rs  capabilities.rs  component.rs  context.rs  crypto.rs  domain.rs  experience.rs  intelligence.rs  intent_action.rs  lib.rs  main.rs  memory.rs  policy.rs  provenance.rs  service.rs  storage.rs  syscore.rs  tools.rs  worldmodel.rs
aletheia/src/ai/: context.rs  llama.rs  mod.rs  runtime.rs
aletheia/tests/: acceptance.rs  component.rs  component_chaos.rs  component_signing.rs  conformance.rs  property.rs  sdk_component.rs  search.rs  security.rs  spine.rs
aletheia/tests/fixtures/: hello_component.wasm
component-sdk/: Cargo.toml
component-sdk/src/: lib.rs
docs/: ARCHITECTURE-GAPS.md  ARCHITECTURE-GAPS2.md  Aletheia_Compatibility_Environment_Appendix.md  Aletheia_Linux_Platform_and_OS_Architecture_Addendum_v1_superseded.md  Aletheia_Product_Requirements_Document.md  Aletheia_Product_Requirements_Document_v1_superseded.md  Aletheia_Software_Architecture_Document.md  Aletheia_Software_Architecture_Document_v1_superseded.md  BOOT.md  TRACEABILITY.md
docs/adr/: ADR-001-from-scratch-os.md  ADR-002-seven-primitives.md  ADR-003-capability-security.md  ADR-004-rust.md  ADR-005-semantic-store.md  ADR-006-untrusted-intelligence.md  ADR-007-agents.md  ADR-008-wasm-components.md  ADR-009-native-experience.md  ADR-010-hosted-first.md  ADR-011-linux-compat-only.md  ADR-012-validation-pyramid.md  ADR-013-vm-then-hardware-qualification.md  ADR-014-wasm-component-runtime.md  ADR-015-policy-approval-separation.md  ADR-016-service-api-ipc-boundary.md  ADR-017-ai-subsystem.md  ADR-018-context-engine.md  ADR-019-hal-amd64-riscv-targets.md  ADR-020-ipc-substrate.md  ADR-021-smp-multicore.md  ADR-022-ai-execution-substrate.md  ADR-023-device-driver-architecture.md  ADR-024-persistent-storage-recovery.md  ADR-025-secure-boot-chain-of-trust.md  ADR-026-fault-recovery-supervision.md  ADR-027-capability-concurrency-model.md
docs/gap/: ARCHITECTURE-GAP3.md  ARCHITECTURE-GAPS.md  ARCHITECTURE-GAPS2.md
examples/hello-component/: Cargo.toml
examples/hello-component/src/: lib.rs
kernel/: Cargo.toml  README.md  linker.ld  rust-toolchain.toml
kernel-core/: Cargo.toml
kernel-core/src/: device.rs  grant.rs  ipc.rs  lib.rs  priosched.rs  sched.rs  selftest.rs  smpsched.rs  spine.rs  storage.rs  sync.rs
kernel-core/tests/: cap_concurrency.rs  device.rs  grant.rs  invariants.rs  ipc.rs  priosched.rs  sched.rs  security_behavior.rs  smpsched.rs  storage.rs  sync.rs
kernel-riscv64/: Cargo.toml  linker.ld
kernel-riscv64/.cargo/: config.toml
kernel-riscv64/src/: arch.rs  boot.s  console.rs  exit.rs  frames.rs  hal.rs  heap.rs  main.rs  sbi.rs  smp.rs  trap.rs  usermode.rs  vm.rs
kernel-x86_64/: Cargo.toml  README.md  aletheia-x86_64.vmx  rust-toolchain.toml
kernel-x86_64/.cargo/: config.toml
kernel-x86_64/scripts/: build-image.sh  build-vbox.sh  set-esp-type.py  smoke-test.sh
kernel-x86_64/src/: cell.rs  console.rs  exit.rs  framebuffer.rs  frames.rs  gdt.rs  hal.rs  heap.rs  idt.rs  main.rs  pic.rs  pit.rs  serial.rs  smp.rs  usermode.rs  vm.rs
kernel/.cargo/: config.toml
kernel/src/: arch.rs  bench.rs  boot.s  frames.rs  hal.rs  heap.rs  main.rs  selftest.rs  semihosting.rs  smp.rs  spine.rs  uart.rs  usermode.rs  vectors.s  virtio.rs  vm.rs
models/: minicpm.toml
scripts/: build-example-component.sh  check-traceability.sh  conformance.sh  e2e-all.sh  linux_pipe_bench.sh  vm-e2e-riscv.sh  vm-e2e.sh
